File Structure Setup

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,8 @@ modGroup = com.drzenovka.cyhmn
 # When false, com.github.GTNewHorizons is used.
 useModGroupForPublishing = true
 
+useGitVersion = false
+
 # Updates your build.gradle and settings.gradle automatically whenever an update is available.
 autoUpdateBuildScript = false
 
